--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         ]
     },
     "require": {
-        "nesbot/carbon": "^1.36",
-        "php": ">=5.6"
+        "nesbot/carbon": "^2.0",
+        "php": "^8.0"
     }
 }
